@@ -49,6 +49,7 @@ katlascontrol.h         katlascontrol.cpp
 Items on the widget (QObjects):
 -------------------------------
 katlascrosshair.h       katlascrosshair.cpp
+katlaswindrose.h        katlaswindrose.cpp
 
 
 DOING
@@ -77,7 +78,6 @@ tinywebbrowser.h        tinywebbrowser.cpp
 KdeMainWindow.h         KdeMainWindow.cpp
 
 Items on the widget (QObjects):
-katlaswindrose.h        katlaswindrose.cpp
 katlasmapscale.h        katlasmapscale.cpp
 
 Special: TexturePalette
