@@ -1,4 +1,5 @@
 29.04.07 - ingwa
+	Cleaned katlaswindrose.{h,cpp}
 	Cleaned katlascrosshair.{h,cpp}
 	Cleaned placemarkinfodialog.{h,cpp}
 	Cleaned maptheme.{h,cpp}
